Criacao de procedimentos de regex

--- a/Analyser/Analyser/Forms/MainForm.resx
+++ b/Analyser/Analyser/Forms/MainForm.resx
@@ -129,19 +129,158 @@
   <metadata name="lexema.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="linha.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="coluna.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="token.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="lexema.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="openFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIAAiIgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
+        ck5UAc+id5oAACHcSURBVHja7V2JX1XX1e2f9TUSE9PYNGOTNm3SpEkzNUmTNGnSJk2jcYyzxjggKKIg
+        CDghCiqi4iyDgCKDIqACgiDzrEz7u2s/njHKvb4J3r33rdXf+eVrvjTed+8565yz99pr/0oIgohY/Iqv
+        gCBIAARBkAAIgiABEARBAiAIggRAEAQJgCAIEgBBECQAgiBIAARBkAAIgiABEARBAiAIggRAEAQJgCAI
+        EgBBECQAgiBIAARBkAAIgiABEARBAiAIggRAEAQJgCAIEgBBECQAgiBIAARBkAAIgiABEH5hZGRI7tzt
+        k86eW1LXdEnKq3PlwuVDUlNfKLfbr8vgnV4ZNv4ZggRAuGjRd/W2yNW6fMk8sUrWprwly7e+LEs2vyA/
+        bPqdLNz4jCyOe16Wbfm9rN72mqQfWyKVtSelu/e2jI2N8QWSAAinoq2zQU4WJ8mWjC/kB2Ohf79+ujGi
+        ZPY6Yxh//f6+4f17c4x/Zm70E7Jx10dy9sIOae24wRdJAiCchJ6+Njl7cYfEp38m82N+YyzuacYif9yv
+        gf/NnOjpsnHnh3K6JEU6u2/JmPBEQAIgbIox6RvolIKyvRK35x/G0X6mzFr32PgO/3jAY9bax2RB7NMS
+        nfau/rsH7vTwVZMACDth8G6flFXnSuK+fxuLdabu3rODXPi/OA3oFWGazNswwyCXT6Si9qT0D3TxxZMA
+        iHBiaHhQqm6ck73HlmpQL1QL/lED8YS0Q3OksvaUDAx280OQAIipBFJ11fWFsjtnoSzf8rIe9UO54z96
+        eE4ES+NflB3ZczSNOML0IQmAmFxgkTXertJ0HtJ2GrkPIMAXsquB/tlR+ixZJ1dLc1sNdQQkAGIy0NR6
+        VY4XbpU129+UOdFP6OIP18J/mAg8z7Iy8VU5krdRmm5f5QcjARChQHNbrZw4n6BReCz879fbZ+GbkcG6
+        1L/JsfzNcpsaAhIAERigxIMQJ3bn31WYMyuMR32/U4eafnxc1htEcM74Df2DXdQQkAAIX9A30KFpti17
+        P9f8u+d4HeWYxf+ghmB+7G9UVVhSeVAFSgQJgJgAyKujOCc561vN5TtxwVvpCPCbtmb8S4uPUHREkAAI
+        A3eHBqS2oUh2ZM+VRXHPhTWqPxVZA2gI8FuhXxgeucsJQAKITGDyI1qecXy5Rs9njxfkuHXx3x8kBBEg
+        dQgBU31TmQwP3+GEIAFEzsK/2XJZDpxaIyu2vmK7lN5UngZQbLR48/Ny8PQaaWy5QjERCcC9GB0dUaHM
+        kbxNsjrptYhb8I86FSw3yDAnL1Za2q5xspAA3IQxjX6fKUmRmB3va0ovEnd838REUfqOThUlS3vXTX13
+        BAnAmct+DAu/VUtoY3d+oCm9WePSWS5466vB/JinZEPae0oEXT3NnEwkAGcBufyLVTmyOf1TmWdM5p/d
+        d7jAfS02wpi74UnVEFy4ki29/e2cWCQAe2No+I5U1JyQtOw5WinHRR+aq8GCjTNl+4H/SXnNcTU1JUgA
+        tlv4MN3ceXjufVV6XPyhPBFAVQhSTc76r+omWHVIAgg7kNK70VQqu3IWyJL4F+4rkeWinaz4AIh1Udyz
+        knpwltTfgoaAYiISQBiAXD5SeisTXr3v3spFOnUxgseNE8FLknMuRhqaK2R0dJiTkgQw+ZF9lLhi4aM8
+        FzbbPOqHt8YAYqI1yW/K4bMb5GZzJXsZkAAmZ+F3dDfJ6ZLtxsJ/R9V73pJXDjuUH0/Tb7Im+Q05U5I6
+        XnVIIiABhACoyz9fsV/Lc+dreS5z+Xa9FuA0NnfDDE0dFlVk6bcjSAABobe/Q0tXk7K+cV15biQMEEHi
+        vq+ksHwfexmQAHwH8sylVUdkW+bX2jtvFqP6zr0arP21LNz4W0nc/28puXyQVYckAHOgLv/azRLZeXi+
+        LB6vy2eAzx1CIhDBD5ueUTHR9ZsX9FsTJACF5vIbS7U8FyIeb3SZi8d9GQP8Fd84/egSqW0opqowkglg
+        ZHRY88fZZ6JlZcIfudtHGBmg/DjzxI/quiwRnDqMOAIYGxuVzu4mOVmUJOtS3x435OA9PzINSZ6QdSlv
+        S25BvHR0NcqoMTdIAO5d+prLzy/dLdFp7423zeauTw3BNK06XLv9r6ohaO2sJwG4DV29LXK+fL/E7vpQ
+        5sXM4MTnmHDMWT9dDUkKyzKku+82CcDpGLzTo+W5SOkhHcQdn8PXq8G2/f+JCAtzVxLAnbv92j0XHvso
+        GGF5Loff5ccGEaDqEOXH5dXu9SFwFQEMGh+ppuG8GnIs2vTsLxpXcnAE2vQUGgLMKY8PwV0SgF1TevtP
+        rFSrbS56jskgA8wt6EXqmi7pnCMBhBmjYyPS0n5dss9Gy7qUtyLWY59japuarE56XYkAc8/pqUNHEgBy
+        +bCNRi/6n5Lf0DQONfscU9n9GPbuqxJflZxzsdLZfcuxPgSOIwD47128ctjTNttY+NzxOcIdI4CGoLgi
+        S+4O9ZMAJhPt3Y1y8PS68cg+d3wO+xABAoX7jq8Yb2hCAgg5kNZL2PelcfTirs9h32KjzXs+leq6AhJA
+        KIEIP1xe6MbD4YT4AOoLUFpOAggBoM2Gswsi/JxgHE5RE8KExAnXAVsTANRXuFdx8XM4rq7AmLPpRxfb
+        XkpsawJAtH9R3HM89nM4Uk68MHamFFxKJwEEuvunHPiOAT8OR5caoxBtaGiQBOAvaurPy8rEV5nu43B0
+        enBJ/ItaTEQC8FPsc+DUT5xEHI4f3639tew5usi2RqS2JIC2rgaJ2/OJdoTlJOJwekYAdSpNrVdJAL4C
+        XV9p1MnhmiYl0U/IletnSQC+oqL2pOr8OXk43HIKKKs+RgLwFUUVmQz+cbiKAPIv7RE7Niy1HQGgrPJc
+        6U4SAIerCAA29KOjIyQAnwjgonMJwGsawfgF3+kvCWAbCcDtBICOtOtT/6aOsmu3vyXzNsygijHIgf4N
+        0Wnv6juN2fnB+DslAZAAbLZDoedcnvHcKADp7W/Tv+LetzT+RZ4GApTSon1XQdle6ehu1HeKxi4Fxjt1
+        mkCMBOBiAsDiXhD7tJwqTpKRkaEHfsuoesujJwFPAv7v/HkXdxmL5pfmm/CBzL+Urq3bnUKsJACXnwCg
+        9+7suTXh78Hf37L3C60T58L2fcHA8q21s27Cd4oKu7RD35MASADh3/1hT1Z1/Zzp7xkY7Jadh+dpj3o3
+        HMu9whZ1YNb/HvpFCAVoUuY30t3XavpebzSV6hXBCSRAAnApAcyJni4Zucssm0Xg/hqf/pnjTwAe37vf
+        ScK+ryQnL1at2LFLT0aTVXz76NR35HbHDdP3isV06PQ6ngBIAOHbDeEG29hy2erXyIUr2eMxAGfv/ghm
+        nr2wQ4ta4IWP+EZvf7vsP7FqUrId+HdeuHLIumaks0HWprx1z4+PBEACmNLd/1RxsuVH7elrk83G7u+G
+        AOChM+tlaHhwwhPOpt0fT8r32rj7I9PYiodex+R8+T7bpwZJAC4jADzbhh3vS3NbrfkR1dgh8TvmxTzl
+        Cnurqht5pr/18NkNk1K7AV3FsYLNlt13kBqMT/+nrStHSQAuIgAcN7GosftbdYO52VIpq5P+4gINQJQs
+        jnveuOpcMf2t+aW7ZUHszElZOKu2/Vl78Vkhz/jz58f+xrZXARKAmwjAeK6YnX+XlvZrpr8B9+TMkz+6
+        xMw0SpZsfkEab1eZE8ClPeMEEDUpwUePoYa5rVZXb7P6R9h5zpAAXEIA2P1PnE+03P2v3sgf9zOYRgII
+        weJBAPJR9fR5egp5mgRAApjcxbBm+5uWfu+Dd3s1NWjnoz+eDXdmvGPoE6zfdWgIYNb4nwWLLH9TonjW
+        9GOL1SjWDH0DHXoyIwGQACax2OdJY/dPsPyQV+vyZfmWl218H43StCQ6Le3InqtNV1Yk/MGi61JwBIB/
+        LzIma5LfkC17P79XKIW/589zo/deTX2h5byBRPj79dNJACSAyQn+rUr8k7EQzINh2KHSDs2x9XEex+nT
+        JdvvqexQv4BedrtyFpiIegInACzyH7f9WVtoo72bN414q7XG2NGX+J0hSTn43YSpSC+a22q0Zbfd0q4k
+        ADcQgPE8ONrfuWveArq2oUhtoO1brvykptUmUi5CslxalSObdv9jPKUXFSABeAZUgwjeXb954aGCHqB/
+        sEuSs/7rV/puUdyzGl8xw4jx5xzJ22Q71SUJwOEEgGdBuW/VDXPNP3bSzBOrbB35x2+wyl5oRL2n2Xj/
+        O1Rh5727+0YAT+vCw/Via8aXcunqUcs7O1BckeVXVR/+OZwCrKTXOM3gd9pt/pAAHEwAWpyS9Y1KX82A
+        XPXqpNdsHflfnfS69FgU2Nz/DZD3zzq5WuMDi4xFanX18Ubg16W+LWcN8oAC0hf/Oxhlglx8J4Bp+jxW
+        7bf7BjqNk8W3thIGkQAcTQBRKjVF8M/iqTU1aHcHIOy2TRY7+UNqRmPCIqiZkbvcODlcN/3nyqtz9WoB
+        8dOYhWrvQZwq3q5xB3/eGcji8LkYy38vPCVBSHYJxJIAHEwAeA440KD81EqOigi33Sv+cD2BQOmun73q
+        Bu70yPDwXYvUZ99DZiiPQmtHnXFV+MLv74ydHVWIVpWCt1qr9bRjpzlEAnAqARi7SOL+ryxbO6H328KN
+        M8UJRT/YcVHBZ1VkM5kAUSBYmpDxZcDxEgQp0TnaKhiYenA2rwAkgNAo/85eSNPKM7PdD9Fup3kYbtz1
+        oRRXHjCIoHnKviuKp44VxGs6Ndjn33l4vjoDmeHilWytDyABkACCroO3ujfjKBrshA7XpFxgnFqSMr9W
+        gY1VZD1YIDCHbwrSUSehEHzb5VtftsxodPW26NWNBEACCGpsMe6puAObPStMP51oVe3dSb3pwb3HliiZ
+        hXKSItaAMmKo/5AeDOU3BZHkle4yDTriygalIwmABBBUBgAqtmGTABfumnaZZMFOUKj2oKJDZL69q9Gv
+        aP5E2YObLZcNUlmqpcR4j5MRkd9+4FvT4CSeHwRBAiABBDywa1Vb6M+hC1iX8rZrfP/xO+ZGPyn7ji9X
+        pV6ggFUXTDom873g371i6x8sTVkQbPSkGUkAJICA6v4/kNbOetNnvXz9jCze/LzjCcC7OyPekWHs2hA1
+        DQ3fCfgboiKyvOa4koDnzh81KaczEDQswcxTjTdkQ9p7tphLJACHEQBKV/ccWWQZacb1wNltzD0997CQ
+        EvZ9adzXz1rWOvgLnJDwLWGeOjdEwb8HFxYyMFb6hPSji7UEmQRAAvBbcJJbuNV8chnEgFLa7xzq949d
+        Gbszin8g5e3pb5uk7zmqwcWDp9fKihCbpICkYbrqkR5PDCw8EgAJICD57/mK/abPibsnmlba2YzS6vet
+        2PqKnmCwOK3cjUIFpBmRbkQZcKjy8yhUgkFLfXO56Z9bUnkg7LJgEoDDCEDlv8ZuZRUAhEWVGn84zPYL
+        wiZ0KoK0eTiIe37A8QHj5IRKQQRPQ1WlefnaactAIHQa4Z5PJAAHEQB2dQQArfTmcMJ1ouknymkhzPF3
+        97aavIGIiG40XtTYQLAnKOzsZy6kmguCejyGoeE8qZEAHEYAuDNuzfiX6UJBh9rsM9Hy3Zr/c9TiR04e
+        Bh3+oOn2VZ28KHgyQ3V9gWrzrcqlJwyi5m302xpsom+1/8RKU6cgLLrtB/4X1jgACcCBBJBycJbp3RjE
+        gO60Trv/477c62Owr7v3tp5yNux4TxugWvUFQBAR6VDU4ZdV51oWTt0POBAFm0bFN8CfaxUI3JUznycA
+        EoB/x8r9x1eaPmNnjzPKfyfSz0MjbwUsXlQ3QgKN9CAWjq+OQLPVPeh52Xd8hdZPPKpEuLA8Y1wiHBXU
+        4kKNgZVeA23Ngj1pkAAihgCixr3/zQ1AWtpr1f3GaQFAqOLgwmN2j69rKtPFuzjuufvku/55Amp6cf10
+        bd19vHCrtHU1mBLN7iMLg36H+PPgxGRVsIVqTk/PgCgSAAnAN4VZYVmG6TNC5+5p/OE8BeCa7X/VAh3E
+        Me7P0x/L3zxePRdaV2DYjxeU7dUrhRfwCjxdkuKXHdijJNvXGy+aPh+6DMPWbDYJgATgy/Ef7rMXqw5b
+        ppagmXeq7Be+erABP2osejgdb0h7V089E7/z4PoCIFeP/198+md6FMeAv2IoJdQgmqrr5oatMHNdEv9C
+        2AibBOAkAljnmfBWuWWYUs52cMtvvFv8Tm8ZsydAFjVpnYG0E5FWHD5xzw8gtIsxSipqT5qnHJtKZZlq
+        NkgAJAAfCGDZlpeMXb7Y9Bkrak64ovrPCb0BfR045psBxU0kABKAzwQAhZ9VS2qkr0gA9iIAT1XgxGnb
+        m82VGpQkAZAA/CCAMtNnLK7MJAE8oIr0EED4ntPKHQhBzpUJr5IASAC+Gk28opF+UwKoiCQCeFxTaPW3
+        zAkR7bjCXRaNhiSjpgRwPaxZGxKA42IAv7eUzELtFkkEgI67J4uSJlxgUEUm7v932FOiuIaYnQAgZ/Z0
+        QCYBkAB8IAA441hVAlbWnoowAnhcK+rwTjz6gbF7Yh5M7GDVfJMdBKy/Va4qSBIACcDnNOCVa2dMnxEp
+        wu/XR0UkCaCzEMp5iyuzVGP/QxgFNvfHKS5dPWL6vWoairSegQRAAvCJACBSscor19SfD6u2PNwuQpAU
+        QziEd2AHNSSeA/4MZrhaV6CnOhIACSAkUmAExHRCReApwI5ZikVxz1mmbdG7gVJgEoDvrjkbZmgLKzOg
+        I0106juOKwZy66nkx21/tkxTou7AY0NGAiAB+PjB9uYuNX3Gju5G1bbPIgGEfeAbbNr9sWnVIXA0Py6s
+        aUoSgMMIANr4nTnzTZ9RDUGy5zjUENRlBGB8AxQX9fS1mn4vdCiiJyAJwC9HIPSzM/PIR0sw2Fw71RLc
+        TQPfIOvkalNfQjQ4Scr8hpZgJAD/dhV0lLFqO5VfumfSTEE91XOP6XN4h+d9MOg40bs6U5JqcV1r0t4H
+        tAQjAfj1wVA8AuMMKy0AFIOT0e3mh03PyPrUdzTOsDXjC4nd9aGsTnpd5sXMYNzhwZRt3HOqzDRDQ3OF
+        x32YVwASgD+mGfNjn5aSywdMnxMWVOtT/xZCX0BPY054DcIrr9PYueCpN2b8B176qGiDTdlPyW/wJHB/
+        Y5DkN1XpZwYIhFSstI6NQUgAfradyi3cYvqc6DuXEMLWYPNjntJg1e3261ZvR2sUYnd+SAIY/0YgzL6B
+        DtM3BtJkc1ASQEBxgNSDs6S333xywY8+VMU2sBl/lGPv/dp2j39fZBMAFIAHTq2xIOleST+6iL0BSQCB
+        3S9xvLQKBKIZRvBa+ChdzHUW5bYPAhPpVHGyIzsThdS7cRO8G3Ms9Rqb93wa9rgJCcCBBIAB8QgMJa0m
+        GIJzwfra785ZKAN3evx6T1C+ef7saREbAFyx9Q+WBH298cI9i3MSAAkgoAFJsFmDC3xQVMThCB/MVcMq
+        jWUGXE3QvSiSxUjJWf817UIEbwCdRzYImJIAHEwA6BGIu6TZsxZV7L/nrhvoPbbU4hhrBghfEIOIVDES
+        Tme4BpmZgKD3AMRcdnFhJgE4lACWbnlJWjvrTJ+3taNOj+LBxABQreYvoFJMP7Y4YglgVeKr0tR61fJ6
+        BhswEgAJILjKwJintPmlmeMsFmIwWnMc4dEl91F99B4EMgaJ+7+KyCsA3vWeo4t0lzcN0FYdVi0HCYAE
+        EHSwCUfJYYsFCiVaoLbY+J3IZd/fOssXoDmJR4kYFYHH/xlSUnnQ9N2ATFGsZSfCIgE4lgCm6VESEWUz
+        tHfdlLg9n6gwJdBTRsGldJ/fUf9gl60m+FTrM6LT3pXmthrzDEnLFflx22u2mkMkAIcSAHZ1WGA9KlIP
+        19y5GgwMbEcGyVyty3/k+0HU+/j5BFm4cWZEEgCCpofOrLM8kaEZKeop7HI6IgE4mgA8u05y1rfqA2Ce
+        l78ia5LfCFh04mlz/Re1t4a0Fe/hwZQjnIgOnF5jq8k91QsJ7j9WnYD7B7tVwRm6Gg0SQMQTgNco1Mp4
+        cnR0WDvuBvvnYGePT/+nnChK1BMBrh5l1cck51ysrEt5W9Nfkbj4vQOSabPcP1DTcH68Ccg0EgAJILSn
+        gOyz0abGEzr56s+rpXiwEldvnhtXD0SyESOYi666EV4FCNk1GrNaaSPwjexWMk0CcAEB4G6P3DMCTOa5
+        +b6gTwEc5iMp82stjTYDegCiRNtuJyQSgCsIwDNOF283VZ8B126WGKeA51mzH+IBq3Z0ZDK9ghnfxK4F
+        UiQAFxEA7uFWJcIqDMpdSsvwEBt/pB6aZRmERWoU1l92DV6SAFxCALiXoxOtFRC8Q4txkkBoArCL4p7V
+        QKgViiuy9JRAAiABTPJu9Jhs3PWhdPU2W+bqM3KXcwGHqO5/R/Yc6bfY/Xv62rRoy67ZERKAiwgAd3tU
+        /529kGb5O+AZ+FPSXyI6ZReqvP8Ni7ZfqNGAivKHjc+QAEgAU5cShPS3vbvR4neMRrxrTyhKfo/kbRpv
+        SW4mw27UWgo7CX9IAC4nAK8kNa9010OKvV8eTVuN68JHXMwBjo27P5K2znoL8dWIVmoGWohFAiABBHUV
+        QM65pb3W8veUXT0Wsbr9YMuwiyoyxawM27P7N9gy708CiAgC8JwC4MpjVcuPppU4BTAj4N+Cid35dzVb
+        MVf9Den1wAlXLBKASwkAO8+yLS9pbb4ZUNiTemg2G4n6GWN5VMPP6vpCWZX4J0cIrkgALiUA78eFOSWE
+        KBNBranTP2VLLz/faXTae6ZNUiAH9pixOuf3kABcSwBRmoI6U5Ly0FUAvwV+fwtsYk3lNNef4sqsh2TX
+        yAjkI+3noJJoEoCLCeBeuXDcc6oN6Oy5pZJVdKUtrjygTT9msy4goCDr0viXpODSXunqaVb5Nd5pYdle
+        zzt11PwgAbiaAO5Fro1dCypB6NZjdnygsmEWBQWnAsTpadPuj/WahcCgXeW+JAASwL3TAJ6dCkC+UxJA
+        oARQupNpMw5XBTXhGUkC8BEQgJAAONxEAI9SjZIA7kN5zXFOHA5X+Rmgk7QdYUsCqG0o0hpwRs853JDN
+        QJoYfpEkAB8BbzdEfO1c4cXB4evuvz71HbnVWkMC8BUjo8OSdXI15bMcLiCAx7R35J2hfhKAP4AB5LL4
+        lxgM5HB0+hICsdKqI3ZdZvYlAOi9t2d9y3w6h6Oj/wn7vrQ0MyUBWABacCcqvzg4EPxbuPGZcU8DIQEE
+        AjTawP2JpwAOpw34FKBJjFUjExKAD0AhyLbMrxkL4HDU3X/znk+lua3W7svL/gQA3Gi8qA05mBbkcMK9
+        H3PVrnl/RxIAANcdsKq3SoyTjcNulYtqZLrrQ+0ibUfdv6MJAGjvuin7jq9wlBkER2Qc+dG5OP3oYrnV
+        Wu2kJeUsAgDQdaewfJ823fh+/XQSAUdYd30E+3Dkzy/dLf2D3U5bTs4jAACdYOEOk1uwRd1h4M7L+ADH
+        VO74WPirk17TOYjeBaOjw05cSs4kAC/gF9fcVqPXArSQohEHx2QvfMjTVyb8UfadWCENtyocc9d3JQF4
+        MTR8R643XlCP/hVbXyEJcEzKcX9p/IuSkbtMuz9jzrkBriCAn+MDg/pxkjK/1m48HispkgFHMFZkUbJo
+        0++0Q3HV9XMag3ITXEUAXkB9hZZcaBmN6KzHk59EwOG7jBdHfUh54/d+LiWXD0r/QJcbl4o7CcCLgcFu
+        KarIkm37/6NBG6oJOXwR8sDNGZsH2o739reLVX9CEoAD0N13WwrLMiRmx/uaOuRE55ho14etO4xo4EoN
+        CXokICIIwAuka+DOCg0Bes/zRMCB6yFOh0gnHz4Xo25UD3YjIgG4CEjb3O64LkfzN8tPyW+Mi4lIBJF4
+        1Me3xxw4cOonaW6vlZHRoUhbDpFHAPdrCG62VErWyR+1BRWzBZF13F+R8Af99pgDkbTjkwAeSh0OaOXW
+        niM/qH2TN/3DReK+lB7+im+MlN7VG/muS+mRAIIATBur6wq1Bx0mCdJArDp0Sy5/mn7TpMxvtFJvwIGa
+        fRLAFGF45K5U1p6UhH1fyfzYp+lM7PB7PkQ8ica3LK85oQ5TBAnAJ/QPdmkeeMvezzVjwAXlNEuu6ZrS
+        KyzPkO7eVk5oEkBg6OxukvxLe2Tjro9kbjRTh3Y/7oOs16a8JWcv7pDWjjpb9uMjATguYzAmXb0tklu4
+        RdZo6vBxEoHNjvrI5UPfcbwwQdq6GiI6sk8CmEQiaGq9KlmnftLyY099AQOFYdXsG4t/ZcKrcuDUGrnR
+        WMqFTwKYfIyMDKlRKSYdio28k5ELcmoHynMzT6ySmvpCGRoe5MQkAUwtUH5cf6tc9hxddM+nkBqCKcjl
+        b35ePfev3bzAXD4JIPyAOcTla6clcf9X1BBMlmZfy3N/qzqNCk3p9XPikQDsBfSAu3glWycprgYMFIZm
+        10d5LnL5qOjsHejgRCMB2BuoIS+typHotHfHqw55GggkwDd3wwzZtPtjTcMiC0OQAByFzp5mOVOSKmu3
+        v6VEMIsnAh/Kcx/TlF506juSWxAvrZ31jOyTAJwN1Jij/Fjbm639NU8EFgG+dSlvyaEz67WvntMdd0kA
+        xC/QePuKHMnbJD9ue43xgQcGPPYPn90gjS2Xte8DQQJwJdSHoLlS7aUXxT0rcyLUkMS748OLYfeRhVLX
+        dEmGR4Y4QUgAkQGvD8GunPmybMvvPRqCCEgdestzl2x+QZKzvpWrdXnGu2BKjwQQwUQAc4rUQ7M13eXm
+        04C3Lh9p0vKa4xTxkAAIL6AhKKrIlPj0z2RezFOukhbjZLMgdqb+tqKK/dLT18YPTgIgJkJ3LyzM92ot
+        O04EzjUk8RTq4DesS31bc/lo6MqUHgmAeGSgcMw4EXTIqeJk2bDjfZkb/YSjNAQ46sNjH89+uiRFPfa5
+        8EkARADo7Lklxwu3qg+BE/QDnrbZr8uxgnjVP7i5qw4JgJgyNDRXSPaZ9Vr7bjfn4p9Tei+qx37drTIZ
+        GR3mRyMBEKHE8PBdudlyWdugY7HhqB1OIsCfDR0DcvnpxxYrSaFEmiABEJNJBHAuvnZaUg585yk/DkP3
+        Y4/j7rOShrbZN85pSTRBAiCmEAODPVJWnSvbD3yrraynavEjsg+P/QtXspnSIwEQ4UZvf4dU1J6UuD2f
+        aPR9dshPBFH36vJhk37xymHp7qPVNgmAsNeJ4E6PFJTtVR+C+TFPhURDADJBKTNSenmlu1WnQJAACNti
+        TDq6GtUeO2bnB5qWCyRQ6PnfRCmZHM2P0/JceuyTAAin0MDYqLS0X5OTRdtkQ9p7Kia6V4xzz8785zF7
+        /c/FSDjqgzyOn0/QEmaKeEgAhEMxOjqsSryy6mOyI3uu9jNA2g7ZA5hsQqOP/xt/b1Xin/SfgZ0ZZLs0
+        5CABEC4C0oeDd3qlubVGqm7kScnlg2q0iTQeGp709LXK8PAd4xLBoz4JgCAIEgBBECQAgiBIAARBkAAI
+        giABEARBAiAIggRAEAQJgCAIEgBBECQAgiBIAARBkAAIgiABEARBAiAIggRAEAQJgCAIEgBBECQAgiBI
+        AARBkAAIgiABEARBAiAIggRAEAQJgCAIEgBBECQAgiBIAARB+IL/B7PI1RgTPeFXAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
